style(navigation): change spacing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,26 +1,23 @@
 <div class="site-header">
 	<div class="row col-md-12">
-		<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand navbar-light bg-light py-3">
+		<nav class="navbar navbar-expand navbar-light bg-light py-3">
 			<div class="container-fluid">
-				<span class="navbar-brand">
+				<span class="navbar-brand mb-0">
 					<i class="fa fa-code"></i>
 				</span>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<div class="navbar-collapse">
+				<ul class="navbar-nav me-auto mb-0 gap-1">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="/">Home</a>
+						<a class="nav-link px-3 py-2" href="/">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/publications/">Publications</a>
+						<a class="nav-link px-3 py-2" href="/publications/">Publications</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/projects/">Projects</a>
+						<a class="nav-link px-3 py-2" href="/projects/">Projects</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/blog/">Blog</a>
+						<a class="nav-link px-3 py-2" href="/blog/">Blog</a>
 					</li>
 				</ul>
 				<span class="navbar-text d-none d-lg-block">
