--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html lang="en">
-	
+
 	{% include head.html %}
-	
-	<body>
-		<div class="container">
+
+	<body class="d-flex flex-column min-vh-100">
+		<div class="container flex-grow-1 d-flex flex-column">
 			{% include header.html %}
 
-			{{ content }}
+			<div class="flex-grow-1">
+				{{ content }}
+			</div>
 
 			{% include footer.html %}
 
 		</div> <!-- /container -->
 
 		{% include scripts.html %}
-	
+
 	</body>
 </html>
