feat(blog): rename tag cloud

--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -4,13 +4,15 @@ layout: default
 
 <div class="row">
 	<div class="col-md-12">
-		<h2>Tag Cloud</h2>
+		<h2>Browse Posts by Tags</h2>
+		<p>The posts touch a lot of different topics in no particular order. It might be more convenient to browse by tags if you have a topic specific interest.</p>
+
 		{% include tag-cloud.html %}
-    
+
 		<hr class="py-3"/>
-    
+
         {{ content }}
 
 		<p class="text-end fs-3">| <a href="#">Back to top</a> |</p>
-	</div>  
+	</div>
 </div><!-- /.blog-overview -->
