feat(Blog): add date to recent posts

--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row">
 	<div class="col-md-12">
-		<h2>Browse Posts by Tags</h2>
+		<h2>Browse Articles by Tags</h2>
 		<p>The posts touch a lot of different topics in no particular order. It might be more convenient to browse by tags if you have a topic specific interest.</p>
 
 		{% include tag-cloud.html %}
