--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,9 @@ layout: default
                 {% for post in site.posts limit:3 %}
                     {% if post.title != page.title %}
                     <li>
+                        <span class="text-muted">{{ post.date | date: "%B %d, %Y" }}: </span>
                         <a href="{{post.url}}">{{ post.title }}</a>
+                        {% if post.tags.size > 0 %}<span class="text-muted"> ({% for tag in post.tags %}#{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %})</span>{% endif %}
                     </li>
                     {% endif %}
                 {% endfor %}
