--- a/_includes/tag-cloud.html
+++ b/_includes/tag-cloud.html
@@ -1,13 +1,9 @@
+
 {% assign tags = site.tags | sort %}
 {% for tag in tags %}
-     <span class="site-tag">
-        <a href="/tag/{{ tag | first | slugify }}/"
-           style="font-size: {{ tag | last | size  |  times: 4 | plus: 80 }}%">
+    <span class="site-tag">
+        <a href="/blog/tag/{{ tag | first | slugify }}/" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80 }}%">
             {{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})
         </a>
     </span>
 {% endfor %}
-
-
-
-
