--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -17,7 +17,7 @@ layout: blog-overview
                 </p>
                 <ul class="tags">
                     {% for tag in post.tags %}
-                    <a href="/tag/{{ tag }}/" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+                    <a href="/blog/tag/{{ tag }}/" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
                     {% if forloop.last != true %} {% endif %}
                     {% endfor %}
                 </ul>
