feat: add RSS feed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 	<title>{{ page.title }} Uli Fahrer - DevSecOps Engineer</title>
 
 	<link rel="shortcut icon" href="/img/sys-command.ico">
+	{% feed_meta %}
 
 	<!-- Styles-->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
