--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,10 +37,17 @@ layout: default
                     </div>
                     <div class="col">
                         <div class="card-body">
-                            <h3 class="card-title">Uli Fahrer</h3>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h3 class="card-title mb-0">Uli Fahrer</h3>
+                                <div>
+                                    <a href="https://de.linkedin.com/in/ulifahrer" target="_blank" class="text-secondary me-2" title="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+                                    <a href="https://github.com/Tooa" target="_blank" class="text-secondary me-2" title="GitHub"><i class="fab fa-github fa-lg"></i></a>
+                                    <a href="/feed.xml" target="_blank" class="text-secondary" title="RSS Feed"><i class="fas fa-rss fa-lg"></i></a>
+                                </div>
+                            </div>
                             <h4 class="fw-italic">Software Engineer</h4>
                             <hr/>
-                            <p class="card-text"><small class="text-body-secondary">Writes about Software Development and Cyber Security</small></p>
+                            <p class="card-text mb-0"><small class="text-body-secondary">Writes about Software Development and Cyber Security</small></p>
                         </div>
                     </div>
                 </div>
