--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,15 @@ layout: default
 
 <div class="content">
     <div class="row">
-        <div class="post-top-meta">
-            <div class="post-date">{{ page.date | date: "%B %d, %Y" }}</div>
-            <h1 class="post-title">{{ page.title }}</h1>
-        </div>
+        <div class="col-md-12">
+            <div class="post-top-meta">
+                <div class="post-date">{{ page.date | date: "%B %d, %Y" }}</div>
+                <h1 class="post-title">{{ page.title }}</h1>
+                {% if page.summary %}<p class="text-muted fs-5">{{ page.summary }}</p>{% endif %}
+            </div>
 
-        <div class="hrline"></div>
+            <div class="hrline"></div>
+        </div>
 
         <!-- Outdated disclaimer; maybe move to own include -->
         {% assign currentYear = site.time | date: '%Y' %}
@@ -68,7 +71,6 @@ layout: default
                     <li>
                         <span class="text-muted">{{ post.date | date: "%B %d, %Y" }}: </span>
                         <a href="{{post.url}}">{{ post.title }}</a>
-                        {% if post.tags.size > 0 %}<span class="text-muted"> ({% for tag in post.tags %}#{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %})</span>{% endif %}
                     </li>
                     {% endif %}
                 {% endfor %}
