--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -2,35 +2,18 @@
 layout: blog-overview
 ---
 
-<h2>{{page.title}}</h2>
-{% for post in site.tags[page.tag] %}
-    <div class="row blog-section">
-        <div class="col-md-12 d-none d-sm-block">
-            <h3 class="fw-bold">
-                <a href="{{ post.url }}">{{ post.title }}</a>
+<h2>Articles tagged "{{ page.tag }}"</h2>
+
+<div class="blog">
+    {% for post in site.tags[page.tag] %}
+        <div class="py-4 {% unless forloop.first %}border-top{% endunless %}">
+            <h3 class="mb-2">
+                <a href="{{ post.url }}" class="text-decoration-none text-dark fw-bold">{{ post.title }}</a>
             </h3>
-            <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
-
-            <div class="box">
-                <p>
-                    {{ post.summary }} <a href="{{ post.url }}">Read more</a>
-                </p>
-                <ul class="tags">
-                    {% for tag in post.tags %}
-                    <a href="/blog/tag/{{ tag }}/" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
-                    {% if forloop.last != true %} {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="hrline"></div>
+            {% if post.summary %}
+                <p class="text-muted mb-2">{{ post.summary }}</p>
+            {% endif %}
+            <small class="text-muted">{{ post.date | date: "%d %b %Y" }} &bull; {% include reading-time.html content=post.content %}{% if post.tags.size > 0 %} &bull; {% for tag in post.tags %}<a href="/blog/tag/{{ tag }}/" class="text-muted">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}{% endif %}</small>
         </div>
-
-
-        <div class="col-12 d-block d-sm-none d-print-none">
-            <h3>
-                <a class="fw-bold" href="{{ post.url }}">{{ post.title }}</a>
-                <span class="fw-light">({{ post.date | date_to_string }}) - {{ post.tags | join: ", "}}</span>
-            </h3>
-        </div>
-    </div>
-{% endfor %}
+    {% endfor %}
+</div>
