--- a/css/style.css
+++ b/css/style.css
@@ -134,88 +134,20 @@ footer > .row { border-top: 1px solid #eee; }
 	========================================================================== */
 
 .post-title,
-.post-date { text-align: center }
+.post-date { text-align: left }
 .post-date {
     letter-spacing: 1px;
     text-transform: uppercase;
 }
 
 .hrline {
-    background: linear-gradient(to right,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
+    background: #ccc;
     height: 1px;
-    margin: 2.5em 0;
+    margin: 0 0 2.5em 0;
 }
 
 .blog-section {
 	padding-top: 20px;
-}
-
-.box {
-    position:relative;
-    border-radius: 3px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    padding: 15px 20px;
-    display: block;
-    margin-top: 3px;
-}
-
-.tags {
-	margin:0;
-	padding:0;
-	position:absolute;
-	right:24px;
-	bottom:-12px;
-	list-style:none;
-}
-.tags li, .tags a{
-	float:left;
-	height:24px;
-	line-height:24px;
-	position:relative;
-	font-size:11px;
-}
-.tags a{
-	margin-left:20px;
-	padding:0 10px 0 12px;
-	background:#0089e0;
-	color:#fff;
-	text-decoration:none;
-	border-bottom-right-radius:4px;
-	border-top-right-radius:4px;
-}
-
-.tags a:before {
-	content:"";
-	float:left;
-	position:absolute;
-	top:0;
-	left:-12px;
-	width:0;
-	height:0;
-	border-color:transparent #0089e0 transparent transparent;
-	border-style:solid;
-	border-width:12px 12px 12px 0;
-}
-
-.tags a:after {
-	content:"";
-	position:absolute;
-	top:10px;
-	left:0;
-	float:left;
-	width:4px;
-	height:4px;
-	border-radius:2px;
-	background:#fff;
-	box-shadow:-1px -1px 2px #004977;
-}
-
-.tags a:hover {
-	background:#555;
-}
-
-.tags a:hover:before {
-	border-color: transparent #555 transparent transparent;
 }
 
 .social-icons {
