feat(blog): render feed.xml human-readable in browser

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
             <div class="post-top-meta">
                 <div class="post-date">{{ page.date | date: "%B %d, %Y" }}</div>
                 <h1 class="post-title">{{ page.title }}</h1>
-                {% if page.summary %}<p class="text-muted fs-5">{{ page.summary }}</p>{% endif %}
+                {% if page.description %}<p class="text-muted fs-5">{{ page.description }}</p>{% endif %}
             </div>
 
             <div class="hrline"></div>
