--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
         {% if page.updated %}
         <div class="col-md-12">
             <p class="text-muted text-end fst-italic mt-4 pt-3 border-top">
-                <small><i class="fas fa-sync-alt"></i> Last updated: {{ page.updated | date: "%B %d, %Y" }}</small>
+                <small><i class="fas fa-sync-alt"></i> Last updated on {{ page.updated | date: "%B %d, %Y" }}</small>
             </p>
         </div>
         {% endif %}
