style(blog): add light backdrop to post entries
Replace border-top separators with card-style presentation using Bootstrap bg-light, rounded corners, and spacing utilities. Each post entry now has visual separation through a subtle grey background instead of horizontal lines.

--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -6,7 +6,7 @@ layout: blog-overview
 
 <div class="blog">
     {% for post in site.tags[page.tag] %}
-        <div class="py-4 {% unless forloop.first %}border-top{% endunless %}">
+        <div class="bg-light rounded p-3 mb-3">
             <h3 class="mb-2">
                 <a href="{{ post.url }}" class="text-decoration-none text-dark fw-bold">{{ post.title }}</a>
             </h3>
