--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -2,18 +2,14 @@
 layout: blog-overview
 ---
 
-<h2>All articles related to "{{ page.tag }}"</h2>
+<p class="text-muted">All articles related to "{{ page.tag }}"</p>
 
 <div class="blog">
     {% for post in site.tags[page.tag] %}
-        <div class="bg-light rounded p-3 mb-3">
-            <h3 class="mb-2">
-                <a href="{{ post.url }}" class="text-decoration-none text-dark fw-bold">{{ post.title }}</a>
-            </h3>
-            {% if post.description %}
-                <p class="text-muted mb-2">{{ post.description }}</p>
-            {% endif %}
-            <small class="text-muted">{{ post.date | date: "%d %b %Y" }} &bull; {% include reading-time.html content=post.content %}{% if post.tags.size > 0 %} &bull; {% for tag in post.tags %}<a href="/blog/tag/{{ tag }}/" class="text-muted">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}{% endif %}</small>
-        </div>
+        {% include post-card.html post=post %}
     {% endfor %}
+</div>
+
+<div class="text-center mt-5 mb-4">
+    <a href="/blog/archive/" class="btn btn-outline-secondary btn-lg">All Posts</a>
 </div>
