feat: add simple dark mode

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,5 @@
 		<script src="/js/html5shiv.min.js"></script>
 		<script src="/js/respond.min.js"></script>
 	<![endif]-->
+	<script src="/js/theme.js"></script>
 </head>
