--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,12 @@
 						<a class="nav-link px-3 py-2 {% if page.url contains '/blog/' %}active{% endif %}" href="/blog/">Blog</a>
 					</li>
 				</ul>
-				<span class="navbar-text d-none d-lg-block">
+				<span class="navbar-text d-none d-lg-block ms-auto">
 					DevSecOps-minded Software Engineer
 				</span>
+				<button id="theme-toggle" class="btn btn-link nav-link px-2" type="button" aria-label="Toggle theme">
+					<i class="fas fa-moon" id="theme-icon"></i>
+				</button>
 				</div>
 			</div>
 		</nav>
