--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -19,6 +19,6 @@ layout: default
         {{ content }}
         </div>
 
-		<p class="text-end fs-3">| <a href="#">Back to top</a> |</p>
+		<p class="text-end fs-3">| <a href="#">Back to Top</a> |</p>
 	</div>
 </div>
