fix(menu): show dark mode button on smaller screens

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,21 +12,21 @@
 				-->
 				<ul class="navbar-nav me-auto mb-0 gap-1">
 					<li class="nav-item">
-						<a class="nav-link px-3 py-2 {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
+						<a class="nav-link px-1 px-sm-3 py-1 py-sm-2 {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link px-3 py-2 {% if page.url contains '/publications/' %}active{% endif %}" href="/publications/">Publications</a>
+						<a class="nav-link px-1 px-sm-3 py-1 py-sm-2 {% if page.url contains '/publications/' %}active{% endif %}" href="/publications/">Publications</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link px-3 py-2 {% if page.url contains '/projects/' %}active{% endif %}" href="/projects/">Projects</a>
+						<a class="nav-link px-1 px-sm-3 py-1 py-sm-2 {% if page.url contains '/projects/' %}active{% endif %}" href="/projects/">Projects</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link px-3 py-2 {% if page.url contains '/blog/' %}active{% endif %}" href="/blog/">Blog</a>
+						<a class="nav-link px-1 px-sm-3 py-1 py-sm-2 {% if page.url contains '/blog/' %}active{% endif %}" href="/blog/">Blog</a>
 					</li>
 				</ul>
 				<ul class="navbar-nav mb-0">
 					<li class="nav-item d-flex align-items-center">
-						<button id="theme-toggle" class="btn btn-link nav-link px-3 py-2 m-0" type="button" aria-label="Toggle theme">
+						<button id="theme-toggle" class="btn btn-link nav-link px-1 px-sm-3 py-1 py-sm-2 m-0" type="button" aria-label="Toggle theme">
 							<i class="fas fa-moon" id="theme-icon"></i>
 						</button>
 					</li>
