feat(pgp): add pgp page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
 
 		<div class="col">
 			<p class="text-end fs-4">
+				<a href="/pgp" title="OpenPGP key">PGP</a> |
 				<a href="/about" title="About this site">Legal Notice</a>
 			</p>
 		</div>
